syntax = "proto3";
package vire.cms;

import "vire/utility/BaseEvent.proto";
import "vire/cms/ResourceStatusRecord.proto";

message DeviceStatusChangeEvent {

  vire.utility.BaseEvent        _base  = 1;
  vire.cms.ResourceStatusRecord status = 100; // Resource status record

}