syntax = "proto3";
package vire.utility;

import "vire/utility/BasePayload.proto";
import "google/protobuf/timestamp.proto";

message BaseEvent {

  BasePayload _base = 1;
  google.protobuf.Timestamp timestamp = 100; // Event timestamp

}
